--- a/springboard_gem/templates/home.jinja2
+++ b/springboard_gem/templates/home.jinja2
@@ -7,9 +7,9 @@
             <div id="banner">
                 <a href="/declaration/">
                     {% if localisation and localisation.image_host and localisation.image %}
-                        <img alt="Welcome to the Skeleton" src="{{localisation.image_host}}{{localisation|thumbor(320)}}"/>
+                        <img alt="Welcome to the Girl Effect" src="{{localisation.image_host}}{{localisation|thumbor(320)}}"/>
                     {% else %}
-                        <img alt='Welcome to the Skeleton' src="{{'springboard:static/img/000000.png'|static_url }}" />
+                        <img alt='Welcome to the Girl Effect' src="{{'springboard:static/img/banner.jpg'|static_url }}" />
                     {% endif %}
                 </a>
             </div>
