--- a/springboard_gem/templates/base.jinja2
+++ b/springboard_gem/templates/base.jinja2
@@ -6,8 +6,9 @@
       dir="{{ language|language_direction }}">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{'springboard:static/img/favicon.ico'|static_url}}" />
-    <title>{{ title|default("Skeleton / Universal Core") }}</title>
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="{{'springboard:static/img/favicon16.png'|static_url}}" />
+    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="{{'springboard:static/img/favicon32.png'|static_url}}" />
+    <title>{{ title|default("Girl Effect Mobile / Universal Core") }}</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
     <meta name="description" content="{{ description|default("") }}" />
     <meta name="keywords" content="{{ keywords|default("") }}" />
@@ -34,8 +35,8 @@
     </div>
     <div class="push"></div><!--/PUSH-->
     <div id="submenu">
-        <a href="/">{{ gettext("Home") }}</a>
-        {% for nav in main_navigation_items %}
+        <a href="{{'home'|route_url}}">{{ gettext("Home") }}</a>
+        {% for nav in all_categories.filter(language=language, featured_in_navbar=True).order_by('position') %}
             <span>
             l <a href="{{'category'|route_url(uuid=nav.uuid)}}">{{nav.title}}</a>
             </span>
